RancherTraining/K8sProjects/Prestashop1.6/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: prestashop16
  labels:
    app: prestashop16
spec:
  selector:
    matchLabels:
      app: prestashop16
  template:
    metadata:
      labels:
        app: prestashop16
    spec:
      volumes:
        - name: prestashop-storage
          persistentVolumeClaim:
            claimName: prestashop-pv-claim
      containers:
      - image: prestashop/prestashop:1.6
        name: prestashop16
        ports:
        - containerPort: 80
          name: prestashop16
        volumeMounts:
        - name: prestashop-storage
          mountPath: /var/www/html/
