RancherTraining/K8sProjects/Prestashop1.6/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prestashop16
  annotations:
    http.port: "80"
spec:
  rules:
  - host: ps6-gcerancher.com
    http:
      paths:
      - backend:
          serviceName: prestashop16
          servicePort: 80
